--- a/style.css
+++ b/style.css
@@ -6,3 +6,14 @@
     padding: 16px;
     margin-bottom: 12px;
   }
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, .button, .cta, .hero {
+  font-family: 'Poppins', sans-serif;
+}
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
